# ELNmap

./: .devcontainer.json  .gitignore  LICENSE  README.md  developer_notes.md  download_prerequistes.sh  generateELNmap.py  generate_map.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  Dockerfile.devcontainer  devcontainer.json
.github/workflows/: createmap.yml  map_workflow.yml
data/: plotted_locations.json  template.html
